Set version to 0.1.1

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_stages: [commit]
 fail_fast: true
 repos:
   - repo: https://github.com/venomlab/pyproject-pyupgrade
-    rev: v0.1.0a2
+    rev: v0.1.0
     hooks:
       - id: ppyupgrade
   - repo: local
